--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -1,24 +1,72 @@
-PROJ_NAME = DepartmentStoreManagement
-SRC = regist.c
+# Name of the project
+PROJECT_NAME = hangman
 
-#To check if the OS is windows or linux and set the executable file extension and delete command accordingly
-ifdef OS
-   RM = del /q
-   FixPath = $(subst /,\,$1)
-   EXEC = exe
-else
-   ifeq ($(shell uname), Linux)
-      RM = rm -rf
-      FixPath = $1
-	  EXEC = out
-   endif
-endif
+# Output directory
+BUILD = build
 
-build:
-	gcc $(SRC) -o $(call FixPath,$(PROJ_NAME).$(EXEC)) -lm
+# All source code files
+SRC = hangman.c\
+src/hang.c
 
-run: build
-	./$(call FixPath,$(PROJ_NAME).$(EXEC))
+# All test source files
+TEST_SRC = src/hang.c\
+test/test_hang.c\
+unity/unity.c\
 
+TEST_OUTPUT = $(BUILD)/Test_$(PROJECT_NAME).out
+
+# All include folders with header files
+INC	= -Iinc\
+-Iunity\
+
+#Library Inlcudes
+#if working with CUnit 
+#INCLUDE_LIBS = -lcunit
+INCLUDE_LIBS =
+
+# Project Output name
+PROJECT_OUTPUT = $(BUILD)/$(PROJECT_NAME).out
+
+# Document files
+DOCUMENTATION_OUTPUT = documentation/html
+
+# Default target built
+$(PROJECT_NAME):all
+
+# Run the target even if the matching name exists
+.PHONY: run clean test doc all
+
+all: $(SRC) $(BUILD)
+	gcc $(SRC) $(INC) -o $(PROJECT_OUTPUT).out
+
+# Call `make run` to run the application
+run:$(PROJECT_NAME)
+	./$(PROJECT_OUTPUT).out
+
+# Document the code using Doxygen
+#doc:
+#	make -C ./documentation
+
+# Build and run the unit tests
+test:$(BUILD)
+	gcc $(TEST_SRC) $(INC) -o $(TEST_OUTPUT)
+	./$(TEST_OUTPUT)
+	
+cpp:
+	cppcheck enable=all $(SRC) hangman.c 
+coverageCheck:$(PROJECT_NAME)
+	gcc -fprofile-arcs -ftest-coverage $(TEST_SRC) $(INC) -o $(call FixPath,$(TEST_OUTPUT))
+	$(call FixPath,$(TEST_OUTPUT))
+	gcov -a hangman.c
+
+
+valgrind:
+	valgrind ./$(TEST_PROJ_NAME).$(EXEC)
+
+# Remove all the built files, invoke by `make clean`
 clean:
-	$(RM) $(call FixPath,$(PROJ_NAME).$(EXEC))
+	rm -rf $(BUILD) $(DOCUMENTATION_OUTPUT)
+
+# Create new build folder if not present
+$(BUILD):
+	mkdir build
