--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -1,72 +1,54 @@
-# Name of the project
-PROJECT_NAME = project_main
+PROJ_NAME = DepartmentStoreManagement
+SRC = Project_main.c\
+src/regist.c\
+TEST_SRC = src/regist.c\
+src/regist.c\
+test/regist.c\
+unity/unity.c 
+  
 
-# Output directory
-BUILD = build
-
-# All source code files
-SRC = project_main.c\
-src/project_main.c
-
-# All test source files
-TEST_SRC = src/project_main.c\
-test/test_project_main.c\
-unity/unity.c\
-
-TEST_OUTPUT = $(BUILD)/Test_$(PROJECT_NAME).out
-
-# All include folders with header files
+#To check if the OS is windows or linux and set the executable file extension and delete command accordingly
+ifdef OS
+   RM = del /q
+   FixPath = $(subst /,\,$1)
+   EXEC = exe
+else
+   ifeq ($(shell uname), Linux)
+      RM = rm -rf
+      FixPath = $1
+	  EXEC = out
+   endif
+endif
+TEST_OUTPUT = $(BUILD)/Test_$(PROJECT_NAME).$(EXEC)
 INC	= -Iinc\
--Iunity\
+-Iunity
 
-#Library Inlcudes
-#if working with CUnit 
-#INCLUDE_LIBS = -lcunit
-INCLUDE_LIBS =
+all:$(SRC) $(BUILD)
+	gcc $(SRC) $(INC) -o $(call FixPath,$(PROJ_NAME).$(EXEC)) -lm
 
-# Project Output name
-PROJECT_OUTPUT = $(BUILD)/$(PROJECT_NAME).out
 
-# Document files
-DOCUMENTATION_OUTPUT = documentation/html
+run: all
+	./$(call FixPath,$(PROJ_NAME).$(EXEC))
 
-# Default target built
-$(PROJECT_NAME):all
+# Build and run of Unit test
 
-# Run the target even if the matching name exists
-.PHONY: run clean test doc all
+build_test:
+	gcc $(TEST_SRC) $(INC) $(INCLUDE_LIBS) -o $(call FixPath,$(PROJ_NAME).$(EXEC)) -lm
 
-all: $(SRC) $(BUILD)
-	gcc $(SRC) $(INC) -o $(PROJECT_OUTPUT).out
+run_test: build_test
+	./$(call FixPath,$(PROJ_NAME).$(EXEC))
 
-# Call `make run` to run the application
-run:$(PROJECT_NAME)
-	./$(PROJECT_OUTPUT).out
+analyze: test memcheck staticcheck coverage sanitize_check
 
-# Document the code using Doxygen
-#doc:
-#	make -C ./documentation
+staticcheck:
+	cppcheck --enable=all -iunity .
 
-# Build and run the unit tests
-test:$(BUILD)
-	gcc $(TEST_SRC) $(INC) -o $(TEST_OUTPUT)
+memcheck:
+	valgrind ./$(TEST_OUTPUT)
+
+sanitize_check:
+	gcc -fsanitize=address -fno-omit-frame-pointer $(TEST_SRC) $(INC) -o $(TEST_OUTPUT) 
 	./$(TEST_OUTPUT)
-	
-cpp:
-	cppcheck enable=all $(SRC) project_main.c 
-coverageCheck:$(PROJECT_NAME)
-	gcc -fprofile-arcs -ftest-coverage $(TEST_SRC) $(INC) -o $(call FixPath,$(TEST_OUTPUT))
-	$(call FixPath,$(TEST_OUTPUT))
-	gcov -a project_main.c
 
-
-valgrind:
-	valgrind ./$(TEST_PROJ_NAME).$(EXEC)
-
-# Remove all the built files, invoke by `make clean`
 clean:
-	rm -rf $(BUILD) $(DOCUMENTATION_OUTPUT)
-
-# Create new build folder if not present
-$(BUILD):
-	mkdir build
+	$(RM) $(call FixPath,$(PROJ_NAME).$(EXEC))
